DP-1550 Add PATCH request support for dataset (#115)
* Add PATCH request support for dataset.
    This allows partial updates of datasets, which is very handy
    for clients using the metadata API.
* Disallow changing some dataset fields:
    * accessRights
    * confidentiality
    * parent_id
    
    Changing these fields on a dataset means that the file paths in S3
    for the dataset also need to change. This is not implemented, so disallow
    changing these fields for now.
